@@ -5,6 +5,20 @@
     <artifactId>ProjetoLab</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.11.0</version>
+                <configuration>
+                    <compilerArgs>
+                        <arg>--enable-preview</arg>
+                    </compilerArgs>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
     <repositories>
         <repository>
             <id>unknown-jars-temp-repo</id>
@@ -41,6 +55,11 @@
             <version>2.7.12</version>
         </dependency>
         <dependency>
+    <groupId>org.openjdk.httpclient</groupId>
+    <artifactId>httpclient</artifactId>
+    <version>11.0.1</version>
+</dependency>
+        <dependency>
             <groupId>org.eclipse.persistence</groupId>
             <artifactId>org.eclipse.persistence.asm</artifactId>
             <version>9.4.0</version>
@@ -76,7 +95,7 @@
             <version>2.7.12</version>
             <scope>provided</scope>
         </dependency>
-
+       
         <dependency>
             <groupId>com.formdev</groupId>
             <artifactId>flatlaf</artifactId>
@@ -147,7 +166,37 @@
             <version>7.2.3</version>
             <type>pom</type>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-beans</artifactId>
+            <version>6.1.6</version>
+            <type>jar</type>
+        </dependency>
+        <dependency>
+    <groupId>org.springframework.security</groupId>
+    <artifactId>spring-security-core</artifactId>
+    <version>5.8.0</version>
+</dependency>
+<dependencies>
+    <!-- Spring Boot Web Starter -->
+    <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-web</artifactId>
+    </dependency>
+    
+    <!-- Spring Data JPA Starter -->
+    <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-data-jpa</artifactId>
+    </dependency>
+</dependencies>
+<parent>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-parent</artifactId>
+    <version>3.1.0</version>  <!-- Certifique-se de usar a versão mais recente ou a desejada -->
+    <relativePath/> <!-- lookup parent from repository -->
+</parent>
 
-
+        
     </dependencies>
 </project>
